# dots

./: README.md  df-install  foot-manifest.sh
_package_template/meta/: manifest.sh
_scripts/: df-track
foot/.config/foot/: foot.ini
foot/meta/: manifest.sh
hyprland/.config/hypr/: binds.conf  hyprland.conf  vars.conf  wallcycle.sh
hyprland/meta/: manifest.sh
lf/.config/lf/: confirm  lfrc  previewer  restore-trash
lf/meta/: manifest.sh
theming/: .stow-local-ignore
theming/.config/gtk-3.0/: gtk.css
theming/.config/matugen/: config.toml  push_term_colors.py  random_transition.py  terminal_daemon.sh
theming/.config/matugen/templates/: gtk.css  pywalfox.json  update_terminals.sh  zellij.kdl
theming/.config/qt5ct/: qt5ct.conf
theming/.config/qt6ct/: qt6ct.conf
theming/.config/tintterm/: pyproject.toml
theming/.config/tintterm/tintterm/: cli.py
theming/meta/: manifest.sh
tl/meta/: README.md  manifest.sh
waybar/.config/waybar/: config.jsonc  style.css
waybar/meta/: manifest.sh
zellij/.config/zellij/: config.kdl
zellij/meta/: manifest.sh
zsh/: .zshrc
zsh/meta/: manifest.sh
