[project]
name = "tintterm"
version = "0.1.0"
description = "Create a terminal color scheme from some simple colors."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coloraide>=6.0",
    "rich>=14.2.0",
]

[project.scripts]
tintterm = "tintterm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
